2001-08-07  Michael Meeks  <michael@ximian.com>

	* oafgnome.c: mostly port to gnome 2.0 and bonobo-activation.

2001-08-06  Darin Adler  <darin@bentspoon.com>

	* gnome-remote-bootstrap.c:
	* libgnomeui.h:
	A couple more places where gnome-init.h needs to be changed
	to gnome-ui-init.h.

2001-08-06  Peter Williams  <peterw@ximian.com>

	* Makefile.am, gnome-ui-init.c, gnome-window.c: Track the
	rename of gnome-init.c to gnome-ui-init.c

2001-08-01  Anders Carlsson  <andersca@codefactory.se>

	* gnome-about.c: Empty stub for API functions until I
	can check in the real implementation.

	* gnome-about.h: Add new API since it's July 32nd today :)

2001-08-01  Michael Meeks  <michael@ximian.com>

	* oafgnome.h: port to bonobo-activation.

	* oafgnome.c (og_pre_args_parse): upd.

	* gnome-rexec-server.c: stale, removed.

2001-07-22  Martin Baulig  <baulig@suse.de>

	* gnome-recently-used.[ch]: Removed.

2001-07-22  Joe Shaw  <joe@ximian.com>

	* gnome-druid.c (gnome_druid_init): Change GNOME_STOCK_BUTTON_PREV
	to GTK_STOCK_GO_BACK, GNOME_STOCK_BUTTON_NEXT to GTK_STOCK_GO_FORWARD,
	GNOME_STOCK_BUTTON_CANCEL to GTK_STOCK_CANCEL, GNOME_STOCK_BUTTON_APPLY
	to GTK_STOCK_APPLY and GNOME_STOCK_BUTTON_HELP to GTK_STOCK_HELP.

	* gnome-font-picker.c: Include gtkstock.h instead of gnome-pixmap.h.
	(gnome_font_picker_create_inside): Change GNOME_STOCK_PIXMAP_FONT to
	GTK_STOCK_SELECT_FONT.

	* gnome-init.c: Don't include gnome-pixmap.h

2001-07-22  Martin Baulig  <baulig@suse.de>

	* pixmaps/stock_menu_scores.png: Removed, same as stock_scores.png.

	* gnome-stock-icons.[ch]: Cleaned this up.

2001-07-21  Martin Baulig  <baulig@suse.de>

	* pixmaps/: Removed all icons which are already in GTK+:
	stock_add.png, stock_align_center.png, stock_align_justify.png,
	stock_align_left.png, stock_align_right.png, stock_bottom.png,
	stock_button_apply.png, stock_button_cancel.png, stock_button_close.png,
	stock_button_no.png, stock_button_ok.png, stock_button_yes.png, stock_cdrom.png,